Isabelle NEWS -- history user-relevant changes
==============================================

New in this Isabelle release
----------------------------

*** General ***

* Pure: considerably improved version of 'constdefs' command.  Now
  performs automatic type-inference of declared constants; additional
  support for local structure declarations (cf. locales and HOL
  records), see also isar-ref manual.  Potential INCOMPATIBILITY: need
  to observe strictly sequential dependencies of definitions within a
  single 'constdefs' section; moreover, the declared name needs to be
  an identifier.  If all fails, consider to fall back on 'consts' and
  'defs' separately.

* Pure: improved indexed syntax and implicit structures.  First of
  all, indexed syntax provides a notational device for subscripted
  application, using the new syntax \<^bsub>term\<^esub> for arbitrary
  expressions.  Secondly, in a local context with structure
  declarations, number indexes \<^sub>n or the empty index (default
  number 1) refer to a certain fixed variable implicitly; option
  show_structs controls printing of implicit structures.  Typical
  applications of these concepts involve record types and locales.

* Pure: clear separation of logical types and nonterminals, where the
  latter may only occur in 'syntax' specifications or type
  abbreviations.  Before that distinction was only partially
  implemented via type class "logic" vs. "{}".  Potential
  INCOMPATIBILITY in rare cases of improper use of 'types'/'consts'
  instead of 'nonterminals'/'syntax'.  Some very exotic syntax
  specifications may require further adaption (e.g. Cube/Base.thy).

* Pure: removed obsolete type class "logic", use the top sort {}
  instead.  Note that non-logical types should be declared as
  'nonterminals' rather than 'types'.  INCOMPATIBILITY for new
  object-logic specifications.

* Pure: print_tac now outputs the goal through the trace channel.
