@@ -316,7 +316,7 @@ apply(erule subcls1_induct_struct)
 apply(  assumption)
 apply( fast)
 apply(auto dest!: wf_cdecl_supD)
-apply(erule (1) converse_rtrancl_into_rtrancl)
+(*CBtrancl: apply(erule (1) converse_rtrancl_into_rtrancl) *)
 done
 
 lemma is_type_rTI: "wf_mhead G sig rT ==> is_type G rT"
